--- a/Modulo-2-CSS/Tutoria-Grid/styles.css
+++ b/Modulo-2-CSS/Tutoria-Grid/styles.css
@@ -1,3 +1,12 @@
+:root{
+    --main-color: #93b5c6;
+    --secondary-color: #DDEDAA;
+    --accent-color: #F0CF65;
+    --warning-color: #D7816A;
+    --danger-color: #BD4F6C;
+    --main-font: 'Poppins', sans-serif;
+}
+
 *{
     margin: 0;
     padding: 0
@@ -8,18 +17,39 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+
 }
 
 .grid-container{
     display: grid;
-    border: 1px solid green;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr;
     column-gap: 25px;
     row-gap: 10px;
 }
 
 .grid-item{     
-    border: 1px solid blue;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    border: 1px solid var(--danger-color);
+    padding: 10px;
+    border-radius: 10px;
+    background-color: var(--danger-color);
+    color:white;
+
+}
+.card-title{
+    text-align: center;
+}
+.card-list{
+    list-style-type: none;
+    color: rgb(240, 240, 240) 
+}
+.card-img{
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 10px;
 }
 
 
@@ -31,42 +61,85 @@
     "footer footer footer"
     ;
     height: 100vh;
-    grid-template-rows: 1fr 7fr 1fr;
-    grid-template-columns: 2fr 6fr 1fr;
+    grid-template-rows: 10% 75% 15%;
+    grid-template-columns: 20% 70% 10%;
+    background-color: var(--secondary-color);
+    font-family: var(--main-font);
 }
 
 .navbar{
     grid-area: navbar;
-    border: 1px solid red;
     display: flex;
+    background-color: var(--main-color);
+    justify-content: space-around;
+    align-items: center;
 
 }
-.navbar, ul{
+.navbar ul{
     display: flex;
     list-style-type: none;
     gap: 10px;
     justify-content: space-around;
+    align-items: center;
+    color: var(--danger-color)
+
+}
+.navbar ul a{
+    color: var(--danger-color)
 }
 .filtros{
     grid-area: filtros;
-    border: 1px solid orange;
     display: flex;
     flex-direction: column;
+    padding: 20px;
+    background-color: var(--warning-color);
 }
 .ads-menu{
     grid-area: ads;
-    border: 1px solid blue;
     display: flex;
     flex-direction: column;
+    padding: 20px;
+    background-color: var(--accent-color);
+    overflow: auto;
+    justify-content: space-between;
+    font-size: 12px;
+}
+.ad{
+    width: 100%; 
+    border-radius: 5px;
 }
 .main-content{
     grid-area: main;
-    border: 1px solid green
+    padding: 20px;
+    overflow: auto;
+    scrollbar-color: var(--danger-color) var(--secondary-color) ;
 }
 .pie-pagina{
     grid-area: footer;
-    border: 1px solid red;
     display:flex;
     justify-content: space-between;
+    padding: 20px;
+    align-items: center;
+    background-color: rgb(184, 184, 184);
+}
+.pie-pagina ul{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    list-style-type: none;
+    gap: 10px;
+}
+
+select{
     padding: 10px;
+    border-radius: 8px;
+    border: 3px solid var(--warning-color);
+}
+.footer-title{
+    color: var(--danger-color)
+}
+
+
+.logo{
+    color: var(--main-color)
 }
